@@ -1,23 +1,28 @@
 /*
+ * JOPA
  * Copyright (C) 2023 Czech Technical University in Prague
  *
- * This program is free software: you can redistribute it and/or modify it under
- * the terms of the GNU General Public License as published by the Free Software
- * Foundation, either version 3 of the License, or (at your option) any
- * later version.
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 3.0 of the License, or (at your option) any later version.
  *
- * This program is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
- * details. You should have received a copy of the GNU General Public License
- * along with this program. If not, see <http://www.gnu.org/licenses/>.
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library.
  */
 package cz.cvut.kbss.ontodriver.jena.list;
 
 import cz.cvut.kbss.ontodriver.jena.connector.StorageConnector;
 import cz.cvut.kbss.ontodriver.jena.environment.Generator;
+import cz.cvut.kbss.ontodriver.model.MultilingualString;
 import org.apache.jena.rdf.model.Property;
 import org.apache.jena.rdf.model.Resource;
+import org.apache.jena.rdf.model.Statement;
 
 import java.net.URI;
 import java.util.ArrayList;
@@ -27,8 +32,10 @@ import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import static org.apache.jena.rdf.model.ResourceFactory.createLangLiteral;
 import static org.apache.jena.rdf.model.ResourceFactory.createResource;
 import static org.apache.jena.rdf.model.ResourceFactory.createStatement;
+import static org.apache.jena.rdf.model.ResourceFactory.createTypedLiteral;
 import static org.mockito.Mockito.when;
 
 public class ListTestUtil {
@@ -93,18 +100,32 @@ public class ListTestUtil {
 
     List<URI> generateReferencedList() {
         final List<URI> list = generateList();
-        this.referencedListNodes = new ArrayList<>(list.size());
+        initReferencedListStatements(list);
+        return list;
+    }
+
+    void initReferencedListStatements(List<?> items) {
+        this.referencedListNodes = new ArrayList<>(items.size());
         Resource firstNode = null;
         Resource previous = null;
-        for (final URI content : list) {
+        for (final Object content : items) {
             final Resource node = createResource(Generator.generateUri().toString());
             if (previous != null) {
                 final Resource prevResource = createResource(previous.toString());
                 when(connectorMock.find(prevResource, hasNext, null, Collections.emptySet())).thenReturn(Collections
                         .singletonList(createStatement(prevResource, hasNext, node)));
             }
-            when(connectorMock.find(node, hasContent, null, Collections.emptySet())).thenReturn(
-                    Collections.singletonList(createStatement(node, hasContent, createResource(content.toString()))));
+            final List<Statement> contentStatements;
+            if (content instanceof URI) {
+                contentStatements = List.of(createStatement(node, hasContent, createResource(content.toString())));
+            } else if (content instanceof MultilingualString) {
+                contentStatements = ((MultilingualString) content).getValue().entrySet().stream()
+                                                                  .map(e -> createStatement(node, hasContent, createLangLiteral(e.getValue(), e.getKey())))
+                                                                  .collect(Collectors.toList());
+            } else {
+                contentStatements = List.of(createStatement(node, hasContent, createTypedLiteral(content)));
+            }
+            when(connectorMock.find(node, hasContent, null, Collections.emptySet())).thenReturn(contentStatements);
             if (firstNode == null) {
                 firstNode = node;
             }
@@ -113,7 +134,6 @@ public class ListTestUtil {
         }
         when(connectorMock.find(owner, hasList, null, Collections.emptySet()))
                 .thenReturn(Collections.singletonList(createStatement(owner, hasList, firstNode)));
-        return list;
     }
 
     List<URI> generateReferencedList(String context) {
